--- a/index.html
+++ b/index.html
@@ -18,7 +18,87 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>questions project</h1>
+    <section class="questions">
+      <!-- title -->
+      <div class="title">
+        <h2>General Questions</h2>
+      </div>
+      <!-- Questions  -->
+      <div class="section-center">
+        <!-- single question  -->
+        <article class="question">
+          <!-- question title  -->
+          <div class="question-title">
+            <p>Do you accept all major credit cards?</p>
+            <button type="button" class="question-btn">
+              <span class="plus-icon">
+                <i class="far fa-plus-square"></i>
+              </span>
+              <span class="minus-icon">
+                <i class="far fa-minus-square"></i>
+              </span>
+            </button>
+          </div>
+          <!-- question text  -->
+          <div class="question-text">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus
+              tempore corporis harum provident placeat nobis eaque beatae ipsam
+              nihil cupiditate?
+            </p>
+          </div>
+        </article>
+        <!-- single question end -->
+        <!-- single question  -->
+        <article class="question">
+          <!-- question title  -->
+          <div class="question-title">
+            <p>Do you support local farmers?</p>
+            <button type="button" class="question-btn">
+              <span class="plus-icon">
+                <i class="far fa-plus-square"></i>
+              </span>
+              <span class="minus-icon">
+                <i class="far fa-minus-square"></i>
+              </span>
+            </button>
+          </div>
+          <!-- question text  -->
+          <div class="question-text">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus
+              tempore corporis harum provident placeat nobis eaque beatae ipsam
+              nihil cupiditate?
+            </p>
+          </div>
+        </article>
+        <!-- single question end -->
+        <!-- single question  -->
+        <article class="question">
+          <!-- question title  -->
+          <div class="question-title">
+            <p>Do you use orgamic ingredients?</p>
+            <button type="button" class="question-btn">
+              <span class="plus-icon">
+                <i class="far fa-plus-square"></i>
+              </span>
+              <span class="minus-icon">
+                <i class="far fa-minus-square"></i>
+              </span>
+            </button>
+          </div>
+          <!-- question text  -->
+          <div class="question-text">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus
+              tempore corporis harum provident placeat nobis eaque beatae ipsam
+              nihil cupiditate?
+            </p>
+          </div>
+        </article>
+        <!-- single question end -->
+      </div>
+    </section>
     <!-- javascript -->
     <script src="app.js"></script>
   </body>
